--- a/index.html
+++ b/index.html
@@ -20,13 +20,22 @@
 
   <!-- Conteúdo do Site -->
   <section class="container">
-    <div class="leftside">...</div>
-    <div class="rightside">...</div>
+    <div class="leftside">
+      <div class="info">
+        <div class="profession">Front End Developer & UI/UX Designer</div>
+        <div class="name">I'm Pedro Silva</div>
+        <div class="buttons">
+          <a href="/">More About Me</a>
+          <a href="/" class="ligths">Hire Me</a>
+        </div>
+      </div>
+    </div>
+    <div class="rightside"></div>
   </section>
 
   <!-- Rodapé do Site -->
   <footer>
-    ...
+    Copyright ©2022 All rights reserved | This website is made with love by <a href="https://github.com/Isilva95/projeto_portfolio" target="_blank">GitHub - Isac Santos</a>.
   </footer>
 </body>
 </html>
